--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </p>
           <form class="footer__newsletter-form">
             <div class="footer__newsletter-input-container">
-              <label for="email"></label>
+              <label for="email" aria-label="Email"></label>
               <input type="email" id="email" name="email" class="footer__newsletter-input" required>
             </div>
             <input type="submit" value="Subscribe" class="footer__newsletter-subscribe">
